# python-project-51

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: personal-check.yml
page_loader/: __init__.py  cli.py  cli_parser.py  download.py  log.py
page_loader/scripts/: page_loader.py
page_loader/tools/: formatter.py  loader.py  names.py  parser.py  reader.py  utils.py
tests/: test_download.py  test_tools.py
tests/fixtures/: expected.html
